# jais-cli

./: .gitignore  .python-version  README.md  pyproject.toml
jais/: __main__.py  main.py  tmp.py
jais/models/: business.py
